tests/baselines/reference/parserIndexSignature2.errors.txt
parserIndexSignature2.ts(2,4): error TS2369: A parameter property is only allowed in a constructor implementation.
parserIndexSignature2.ts(2,11): error TS1018: An index signature parameter cannot have an accessibility modifier.


==== parserIndexSignature2.ts (2 errors) ====
    interface I {
      [public a]
       ~~~~~~~~
!!! error TS2369: A parameter property is only allowed in a constructor implementation.
              ~
!!! error TS1018: An index signature parameter cannot have an accessibility modifier.
    }